<resources>
    <string name="app_name">ExplodedWords</string>
    <string name="prefs_name">ua.lorien.ExplodedWords</string>
    <string name="pref_score">scores</string>
    <string name="action_settings">Settings</string>
    <string name="btn_play_again">Play Again</string>
    <string name="title_activity_end_game">Try Again</string>
    <string name="lbl_main">ExPloDed WoRds</string>
    <string name="title_activity_game">Game</string>
    <string name="lbl_points">Your points is:</string>
    <string name="default_word">ВЗРЫВ</string>
    <string name="quize_word_hint">Enter word (20 letters max)</string>
    <string name="no_score">No Score</string>
    <string name="unknown_user">Unknown</string>
    <string name="lbl_score">Scores (UserName Word Points):</string>
    <string name="clear_score">Clear Score</string>

    <!--Buttons text-->
    <string name="btn_single_play">Single Player</string>
    <string name="btn_multy_play">Multi Player</string>
    <string name="btn_score">Scores</string>
    <string name="btn_settings">Settings</string>
    <!--End Buttons text-->

    <!-- Toast messages-->
    <string name="msg_enter_letter">Please enter one letter</string>
    <string name="letter_used">The Letter already being used. Try again</string>
    <string name="quize_word_msg">Please enter quize word not more then 20 letters</string>
    <!-- End Toast messages-->

    <!-- Words group -->
    <string name="words_group0">скоба жалоба злоба зазноба роба проба утроба особа чащоба трущоба арба верба торба губа палуба труба шуба глыба рыба свадьба усадьба городьба ходьба судьба резьба пальба стрельба мольба борьба гурьба зуб ледоруб сруб волкодав удав рукав
    устав сустав лев хлев гнев напев припев перегрев шкив залив чернослив массив штатив коллектив детектив объектив мотив локомотив архив рыболов плов улов боров остров засов размыв перерыв взрыв клюв зигзаг архипелаг флаг
        аншлаг овраг очаг рычаг забег ночлег снег берег оберег стратег ковчег подвиг сдвиг обжиг долг акваланг шланг трепанг бумеранг мустанг орангутанг пеленг пудинг викинг смокинг реслинг лемминг спиннинг шезлонг диалог
        налог каскад</string>

    <string name="words_group1">мармелад клад приклад доклад шоколад лимонад запад перепад снегопад маскарад виноград сердцеед птицеед гололед плед велосипед мопед сосед муравьед поезд объезд рубероид астероид друид стенд
        углевод невод оленевод развод небосвод шелкопряд шествие возмездие свидание ожидание познание сознание выражение снабжение общение белье зелье подземелье ожерелье ателье ущелье платье багаж абордаж пейзаж экипаж страж
        шантаж монтаж саквояж противогаз заказ приказ показ пересказ рассказ глаз водолаз дикобраз приз паровоз мусоровоз тормоз прогноз гипноз хобби регби алиби сапоги сандалии башмаки плавки носки перчатки колготки сутки
        коньки брюки джунгли фрикадели гантели тефтеликачели брокколи водоросли гусли ясли ходули каракули туфли пельмени колибри харакири граффити ассорти </string>

    <string name="words_group2">доспехи баклуши овощи каравай трамвай расстегай бугай попугай урожай шалопай самурай минтай горностай полицай обычай скарабей воробей муравей соловей апогей чародей хоккей юбилей бобслей сельдерей
        жребий гравий герундий краснокожий чистоплюй негодяй скупердяй разгильдяй лентяй табак бензобак рыбак сайгак чердак пиджак вожак рюкзак зодиак вурдалак бурлак кишлак признак пастернак колпак черпак призрак завтрак
        четвертак смельчак томагавк человек василек камешек черновик полковник асфальтоукладчик ящик желудок рассудок предрассудок осколок рубанок мышьяк каннибал карнавал обвал подвал сеновал самосвал мангал скандал кинжал
        спортзал материал потенциал шакал крахмал арсенал полуфинал персонал журнал трибунал интеграл либерал генерал минерал капитал санузел орел расстрел умысел вертел крокодил тротил мотоцикл</string>

    <string name="words_group3">вигвам бальзам бедлам гиппопотам маразм атеизм капитализм оптимизм феминизм альпинизм афоризм анархизм подхалим псевдоним синоним побратим напалм параллелограмм килограмм слалом металлолом метроном
        астроном синдром автодром фантом плацдарм шторм штурм алгоритм кабан барабан чабан чурбан караван диван болван котлован балаган ураган хулиган рамадан майдан чемодан кардан океан баклажан пармезан партизан меридиан
        таракан великан пеликан вулкан капкан мужлан капеллан гидроплан аэроплан орлан атаман шаман обман флагман наркоман меломан роман карман доберман штурман талисман абориген манекен бульон каньон замужество содружество
        княжество качество пиршество свойство хамство лакомство гражданство коварство манго фламинго торнадо эльдорадо бордо дзюдо блюдо арпеджо банджоф сольфеджио импресарио гуанако яблоко молоко бунгало</string>

    <string name="words_group4">гандикап пикап храп нахрап кацап губошлеп вальдшнеп кроншнеп вертеп прицеп генотип прототип штамп телескоп перископ стереоскоп гироскоп гороскоп галоп эскалоп циклоп грипп тулуп заступ кетчуп
        амбар самовар повар варвар отвар удар базар доллар кошмар кальмар ветеринар сенбернар комиссар гусар резервуар кугуар ягуар тротуар калибр динозавр бакалавр шедевр маневр скафандр цилиндр камамбер бобер ресивер ковер
        револьвер триггер флюгер миллиардер тренажер монтажер лазер бульдозер покер брокер тумблер жонглер трейлер пропеллер мотороллер контролер лицемер пример шагомер номер фермер инженер майор мухомор штопор мусор инкубатор
        аллигатор трактор фактор вектор прожектор контрабас каркас атлас ананас компас тарантас папуас балбес навес занавес геркулес деликатес теннис кодекс</string>

    <string name="words_group5">рефлекс комикс баланс романс резонанс абрикос кокос эскимос занос альбинос утконос допрос насос пылесос бицепс трицепс реверс конкурс прогресс экспресс стресс процесс компромисс нарцисс мотокросс
        троллейбус индус привкус минус парус набат аббат комбат акробат захват делегат фрегат кандидат солдат мандат лауреат плагиат антиквариат плакат синдикат дубликат сертификат адвокат самокат скат салат халат мулат бушлат
        климат примат аромат автомат комбинат шпинат епископат психопат аппарат брат квадрат реферат эмират домкрат концентрат магистрат конденсат реостат космонавт астронавт шербет пулемет миномет кабинет портрет авторитет
        университет бриллиант рандеву какаду кенгуру батискаф параграф телеграф хронограф автограф фотограф жираф штраф рельеф иероглиф тариф шериф шлейф триумф апостроф</string>

    <string name="words_group6">философ шарф торф шельф гольф эльф взмах промах монах запах страх смех успех жених стих шейх подвох горох олигарх воздух кожух подсолнух лопух петух пастух отдых конюх абзац матрац жеребец голубец
        продавец красавец торговец колодец молодец холодец индеец лжец купец глупец мудрец заяц месяц богач врач грач драч лихач лаваш карандаш ералаш шалаш патронташ клещ товарищ овощ борщ дробь голубь прорубь рябь любовь
        морковь обувь тетрадь лошадь площадь лебедь медведь очередь гвоздь гроздь молодежь ложь рожь сталь хрусталь корабль журавль кабель цитадель газель форель деятель автомобиль шпиль штиль слесарь бунтарь янтарь глухарь
        сухарь царь рыцарь дверь деверь лагерь богатырь искренность алоэ каноэ каратэ меню интервью кривая горничная закусочная идея орхидея аллея ахинея батарея оранжерея галерея лотерея траншея стратегия стадия мидия мелодия
        ритмомелодия гвардия студия гимназия</string>
    <!-- Words group -->
    <string name="title_activity_multi_player_game">Enter Word</string>
    <string name="title_activity_scores">Scores</string>

    <!-- Settings activity-->
    <string name="title_activity_settings">Settings</string>
    <string name="prefs_descr">Exploded Words Settings</string>

    <!-- Example General settings -->
    <string name="pref_general_header">General</string>
    <string name="pref_general_summary">Exploded words general settings</string>

    <string name="pref_user_name_title">User name</string>
    <string name="pref_user_name_default">Unknown</string>
    <string name="pref_user_name_summary">Enter your name or nickname. Whatever you want.</string>
    <string name="pref_user_name_value_lbl"> Current name: </string>

    <string name="pref_notifications_title">New message notifications</string>
    <string name="pref_notify_summary">Notify User who set the word with score. (Dont have implementation yet)</string>
    <!-- End Settings activity-->
</resources>
